Flaw Fix | Fixed Stepper Icons Not Centered

--- a/assets/scss/material/_stepper.scss
+++ b/assets/scss/material/_stepper.scss
@@ -108,6 +108,7 @@
 
   .material-icons {
     font-size: 1.333em;
+    vertical-align: baseline;
   }
 }
 
